[project]
name = "grab-site"
version = "2.2.7"
description = "The archivist's web crawler: WARC output, dashboard for all crawls, dynamic ignore patterns"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Ivan Kozik", email = "ivan@ludios.org" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "click>=8.0.0",
    "wpull",
    "lmdb>=1.7.0",
    "autobahn>=20.0.0",
    "google-re2>=1.1.0",
    "websockets>=10.0.0",
]

[project.urls]
Homepage = "https://ludios.org/grab-site/"

[project.scripts]
grab-site = "libgrabsite.main:main"
gs-server = "libgrabsite.server:main"
gs-dump-urls = "libgrabsite.dump_urls:main"

[tool.uv.sources]
wpull = { path = "ludios_wpull-5.0.4" }
yapsy = { path = "tibonihoo-yapsy-6b487b0/package" }
lxml = { path = "lxml-6.0.2" }

[tool.setuptools.packages.find]
include = ["libgrabsite"]

[tool.setuptools.package-data]
libgrabsite = ["*.html", "*.ico", "*.txt", "ignore_sets/*"]
